--- a/src/main/resources/templates/favourites.html
+++ b/src/main/resources/templates/favourites.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>Beauty Planner · Cosmetics Collection</title>
+  <title>Beauty Planner · Favourites</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -11,7 +11,7 @@
 </br></br></br>
 <div class="container">
     <div class="row">
-        <h1>Collection</h1>
+        <h1>Favourites</h1>
     </div>
     </br>
     <table class="table table-striped table-hover table-bordered">
@@ -22,27 +22,22 @@
             <th>Price</th>
             <th>Destination</th>
             <th>Type</th>
-            <th>Opening date</th>
-            <th>Validity term</th>
             <th>Rate</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="cosmetic, cosmeticStat : ${cosmetics}">
+        <tr th:each="cosmetic, cosmeticStat : ${favourites}">
             <td th:text="${cosmeticStat.count}"></td>
             <td th:text="${cosmetic.name}"></td>
             <td th:text="${cosmetic.price}"></td>
             <td th:text="${cosmetic.destination.getDestination()}"></td>
             <td th:text="${cosmetic.type.getType()}"></td>
-            <td th:text="${cosmetic.openingDate}"></td>
-            <td th:text="${cosmetic.validityTerm}"></td>
             <td th:text="${cosmetic.rate}"></td>
             <td>
-                <a class="btn btn-primary" th:href="@{/cosmetics/{cosmeticId}/edit(cosmeticId=${cosmetic.id})}">Edit</a>
-                <a class="btn btn-danger" th:href="@{/cosmetics/{cosmeticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>
-                <a class="btn btn-info" th:href="@{/cosmetics/{cosmeticId}/view(cosmeticId=${cosmetic.id})}">View</a>
-                <a class="btn btn-success" th:href="@{/cosmetics/{cosmeticId}/addToFavourites(cosmeticId=${cosmetic.id})}">Add to favourites</a>
+<!--                <a class="btn btn-primary" th:href="@{/cosmetics/{cosemticId}/edit(cosmeticId=${cosmetic.id})}">Edit</a>-->
+<!--                <a class="btn btn-danger" th:href="@{/cosmetics/{cosemticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>-->
+                <a class="btn btn-danger" th:href="@{/favourites/{cosmeticId}/removeFromFavourites(cosmeticId=${cosmetic.id})}">Remove from favourites</a>
             </td>
         </tr>
         </tbody>
