--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,10 @@
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/ranking}">Ranking<span class="sr-only"></span></a>
                     </li>
+                    <li>
+                        <a class="nav-link active" aria-current="page"
+                           th:href="@{/usedUp}">Used Up<span class="sr-only"></span></a>
+                    </li>
                 </ul>
             </div>
         </div>
