--- a/src/main/resources/templates/cosmetic/ranking.html
+++ b/src/main/resources/templates/cosmetic/ranking.html
@@ -26,7 +26,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="cosmetic, cosmeticStat : ${cosmeticsSorted}">
+        <tr th:each="cosmetic, cosmeticStat : ${cosmeticsRanked}">
             <td th:text="${cosmeticStat.count}"></td>
             <td th:text="${cosmetic.name}"></td>
             <td th:text="${cosmetic.destination.getDestination()}"></td>
