--- a/src/main/resources/templates/cosmetic/add-cosmetic.html
+++ b/src/main/resources/templates/cosmetic/add-cosmetic.html
@@ -77,6 +77,14 @@
                  type="number" step="0.01" th:field="*{rate}">
           <p th:if="${#fields.hasErrors('rate')}" class="text-danger" th:errors="*{rate}"></p>
         </div>
+        <div class="form-group mb-3">
+          <label class="form-label">Number of applications:</label>
+          <input class="form-control"
+                 id="applicationsNumber"
+                 name="applicationsNumber"
+                 placeholder="Enter number of applications"
+                 type="number" step="0.01" th:field="*{applicationsNumber}">
+        </div>
         <button class="btn btn-primary" type="submit">Submit</button>
       </form>
     </div>
