Added view method back-end in UsedUpController

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -9,6 +9,6 @@
 <body>
 <header th:replace="~{index :: header}"></header>
 </br></br></br>
-<h2 class="text-center">TO IMPLEMENT</h2>
+<h2 class="text-center">TO BE IMPLEMENTED</h2>
 </body>
 </html>
