--- a/src/main/resources/templates/used-up.html
+++ b/src/main/resources/templates/used-up.html
@@ -45,7 +45,7 @@
       <td>
         <a class="btn btn-primary" th:href="@{/usedUp/{cosmeticId}/edit(cosmeticId=${cosmetic.id})}">Edit</a>
         <a class="btn btn-danger" th:href="@{/usedUp/{cosmeticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>
-        <a class="btn btn-info" th:href="@{/usedUp/{cosmeticId}/view(cosmeticId=${cosmetic.id})}">View</a>
+        <a class="btn btn-info" th:href="@{/usedUp/{cosmeticId}/cosmeticDetails(cosmeticId=${cosmetic.id})}">View</a>
         <a class="btn btn-success" th:href="@{/usedUp/{cosmeticId}/addToFavourites(cosmeticId=${cosmetic.id})}">Favourites</a>
         <a class="btn btn-secondary" th:href="@{/usedUp/{cosmeticId}/removeFromUsedUp(cosmeticId=${cosmetic.id})}">In use</a>
       </td>
