--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,6 +38,10 @@
                     </li>
                     <li>
                         <a class="nav-link active" aria-current="page"
+                           th:href="@{/ingredients}">Ingredients<span class="sr-only"></span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" aria-current="page"
                            th:href="@{/calendar}">Calendar<span class="sr-only"></span></a>
                     </li>
                 </ul>
