Added logic for ingredient view, delete and edit. Refactored calendar to plans

--- a/src/main/resources/templates/cosmetic/cosmetics.html
+++ b/src/main/resources/templates/cosmetic/cosmetics.html
@@ -11,7 +11,12 @@
 </br></br></br>
 <div class="container">
     <div class="row">
-        <h1>Collection</h1>
+<!--        <ul>-->
+            <h1>Collection</h1>
+<!--        </ul>-->
+    </div>
+    <div class="row" align="right">
+        <strong><a class="btn btn-warning" th:href="@{/cosmetics/new}">Add</a></strong>
     </div>
     </br>
     <table class="table table-striped table-hover table-bordered">
