--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,10 +20,10 @@
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/cosmetics}">Collection<span class="sr-only"></span></a>
                     </li>
-                    <li>
-                    <a class="nav-link active" aria-current="page"
-                       th:href="@{/cosmetics/new}">New Cosmetic<span class="sr-only"></span></a>
-                    </li>
+<!--                    <li>-->
+<!--                    <a class="nav-link active" aria-current="page"-->
+<!--                       th:href="@{/cosmetics/new}">New Cosmetic<span class="sr-only"></span></a>-->
+<!--                    </li>-->
                     <li>
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/favourites}">Favourites<span class="sr-only"></span></a>
@@ -42,7 +42,7 @@
                     </li>
                     <li>
                         <a class="nav-link active" aria-current="page"
-                           th:href="@{/calendar}">Calendar<span class="sr-only"></span></a>
+                           th:href="@{/plans}">Plans<span class="sr-only"></span></a>
                     </li>
                 </ul>
             </div>
