--- a/src/main/resources/templates/favourites.html
+++ b/src/main/resources/templates/favourites.html
@@ -35,8 +35,7 @@
             <td th:text="${cosmetic.type.getType()}"></td>
             <td th:text="${cosmetic.rate}"></td>
             <td>
-<!--                <a class="btn btn-primary" th:href="@{/cosmetics/{cosemticId}/edit(cosmeticId=${cosmetic.id})}">Edit</a>-->
-<!--                <a class="btn btn-danger" th:href="@{/cosmetics/{cosemticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>-->
+                <a class="btn btn-info" th:href="@{/favourites/{cosmeticId}/cosmeticDetails(cosmeticId=${cosmetic.id})}">View</a>
                 <a class="btn btn-danger" th:href="@{/favourites/{cosmeticId}/removeFromFavourites(cosmeticId=${cosmetic.id})}">Remove from favourites</a>
             </td>
         </tr>
