--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,10 +20,6 @@
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/cosmetics}">Collection<span class="sr-only"></span></a>
                     </li>
-<!--                    <li>-->
-<!--                    <a class="nav-link active" aria-current="page"-->
-<!--                       th:href="@{/cosmetics/new}">New Cosmetic<span class="sr-only"></span></a>-->
-<!--                    </li>-->
                     <li>
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/favourites}">Favourites<span class="sr-only"></span></a>
@@ -35,6 +31,10 @@
                     <li>
                         <a class="nav-link active" aria-current="page"
                            th:href="@{/usedUp}">Used Up<span class="sr-only"></span></a>
+                    </li>
+                    <li>
+                        <a class="nav-link active" aria-current="page"
+                           th:href="@{/wishList}">Wish List<span class="sr-only"></span></a>
                     </li>
                     <li>
                         <a class="nav-link active" aria-current="page"
