--- a/src/main/resources/templates/cosmetic/cosmetics.html
+++ b/src/main/resources/templates/cosmetic/cosmetics.html
@@ -54,7 +54,8 @@
                 <a class="btn btn-danger" th:href="@{/cosmetics/{cosmeticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>
                 <a class="btn btn-info" th:href="@{/cosmetics/{cosmeticId}/cosmeticDetails(cosmeticId=${cosmetic.id})}">View</a>
                 <a class="btn btn-success" th:href="@{/cosmetics/{cosmeticId}/addToFavourites(cosmeticId=${cosmetic.id})}">Favourites</a>
-                <a class="btn btn-secondary" th:href="@{/cosmetics/{cosmeticId}/addToUsedUp(cosmeticId=${cosmetic.id})}">Used up</a>
+                <a class="btn btn-secondary" th:href="@{/cosmetics/{cosmeticId}/addToUsedUp(cosmeticId=${cosmetic.id})}">U/P</a>
+                <a class="btn btn-secondary" th:href="@{/cosmetics/{cosmeticId}/moveToWishList(cosmeticId=${cosmetic.id})}">W/L</a>
             </td>
         </tr>
         </tbody>
