--- a/src/main/resources/templates/wished/wish-list.html
+++ b/src/main/resources/templates/wished/wish-list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Beauty Planner · Cosmetics Collection</title>
+    <title>Beauty Planner · Wish List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -11,12 +11,10 @@
 </br></br></br>
 <div class="container">
     <div class="row">
-        <!--        <ul>-->
-        <h1>Collection</h1>
-        <!--        </ul>-->
+        <h1>Wish List</h1>
     </div>
     <div class="row" align="right">
-        <strong><a class="btn btn-warning" th:href="@{/cosmetics/new}">Add</a></strong>
+        <strong><a class="btn btn-warning" th:href="@{/wishList/new}">Add</a></strong>
     </div>
     </br>
     <table class="table table-striped table-hover table-bordered">
@@ -24,35 +22,23 @@
         <tr>
             <th>Id</th>
             <th>Name</th>
-            <th>Applications</th>
             <th>Price</th>
             <th>Destination</th>
             <th>Type</th>
-            <th>Opening date</th>
-            <th>Validity term</th>
-            <th>Rate</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="cosmetic, cosmeticStat : ${cosmetics}">
+        <tr th:each="cosmetic, cosmeticStat : ${wishedCosmetics}">
             <td th:text="${cosmeticStat.count}"></td>
             <td th:text="${cosmetic.name}"></td>
-            <td>
-                <a th:text="${cosmetic.applicationsNumber}"></a>
-                <a class="btn btn-primary" th:href="@{/cosmetics/{cosmeticId}/increaseApplications(cosmeticId=${cosmetic.id})}">+</a>
-                <a class="btn btn-danger" th:href="@{/cosmetics/{cosmeticId}/decreaseApplications(cosmeticId=${cosmetic.id})}">-</a>
-            </td>
             <td th:text="${cosmetic.price}"></td>
             <td th:text="${cosmetic.destination.getDestination()}"></td>
             <td th:text="${cosmetic.type.getType()}"></td>
-            <td th:text="${cosmetic.openingDate} ? ${cosmetic.openingDate} : 'Not opened'"></td>
-            <td th:text="${cosmetic.validityTerm}"></td>
-            <td th:text="${cosmetic.rate}"></td>
             <td>
                 <a class="btn btn-primary" th:href="@{/wishList/{cosmeticId}/edit(cosmeticId=${cosmetic.id})}">Edit</a>
                 <a class="btn btn-danger" th:href="@{/wishList/{cosmeticId}/delete(cosmeticId=${cosmetic.id})}">Delete</a>
-                <a class="btn btn-info" th:href="@{/wishList/{cosmeticId}/cosmeticDetails(cosmeticId=${cosmetic.id})}">View</a>
+                <a class="btn btn-secondary" th:href="@{/wishList/{cosmeticId}/moveToCollection(cosmeticId=${cosmetic.id})}">Bought</a>
             </td>
         </tr>
         </tbody>
