Modified homepage and added image

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,5 +49,12 @@
         </div>
     </nav>
 </header>
+</br></br></br>
+<p style="text-align:center;"><img src="images/beautyplanner.png" align="text-center"></p>
+</br></br></br>
+<p style="text-align:center;">
+    <a class="btn btn-success btn-lg btn-block" role="button" th:href="@{/cosmetics}"
+       style="padding:16px 200px;font-size:30px;">START</a>
+</p>
 </body>
 </html>
